tests/baselines/reference/internalAliasInterfaceInsideLocalModuleWithoutExport.errors.txt
internalAliasInterfaceInsideLocalModuleWithoutExport.ts(6,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== internalAliasInterfaceInsideLocalModuleWithoutExport.ts (1 errors) ====
    export module a {
        export interface I {
        }
    }
    
    export module c {
                  ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        import b = a.I;
        export var x: b;
    }
    